# dyntrace

./: COPYRIGHT  README.markdown  configure.ac
doc/: Doxyfile  Report.doc  oplist.dtd
dyntrace/: Makefile.am  Makefile.pkg  README  configure.ac  dyntrace.1  main.c  optree.c  procfs.h  ptrace.c  ptrace.h  region.c
dyntrace/data/: Makefile  Makefile.am  oplist-x86.xml
dyntrace/doc/: Doxyfile  Instruction-Level Tracing for Workload Characterization of Processor-Bound Programs.doc  dyntrace.dtd  oplist.dtd
dyntrace/dyntrace/: BSDmakefile  Makefile  TODO  dyntrace.1  dyntrace.h  log.c  main.c  optree.c  procfs.h  procfs_freebsd.c  ptrace.c  ptrace.h  radix.c  radix.h  region.c  target_freebsd.c
dyntrace/dyntrace/compat/: queue.h
dyntrace/package/: make-distfile
dyntrace/patches/: README  trace-fix.diff
dyntrace/tools/: Makefile.am  extract.pl  opfreqs.pl  oplist-to-html.sh  oplist-to-html.xsl  trace-to-html.sh  trace-to-html.xsl
patches/: README
tools/: extract.pl  opgroup.pl
